src/tests/fixtures/input_type_one_of/oneOfNotOnType.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlInput
 * @oneOf
 */
export class Greeting {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_type_one_of/oneOfNotOnType.invalid.ts:5:1 - error: Expected the type of a @gqlInput with @oneOf to be attached to a TypeScript union.

5 export class Greeting {}
  ~~~~~~~~~~~~~~~~~~~~~~~~
